--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
   <div class="container">
     <h1>Farjana Siddiquee - Resume</h1>
     <p>If the PDF does not load, <a href="ACCT_SIDDIQUEE_FARJANAA.pdf" target="_blank">click here to download it.</a></p>
-    <iframe src="Resume.pdf" frameborder="0"></iframe>
-    <a href="Resume.pdf" class="download-button" download="Farjana_Siddiquee_Resume.pdf">Download Resume</a>
+    <iframe src="ACCT_SIDDIQUEE_FARJANAA.pdf" frameborder="0"></iframe>
+    <a href="Resume.pdf" class="download-button" download="ACCT_SIDDIQUEE_FARJANAA.pdf">Download Resume</a>
   </div>
 </body>
 </html>
